[project]
name = "unified-llm-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "tiktoken>=0.12.0",
]
[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.uv]
package = true
